--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-postgres = "0.19"
 chrono = "0.4"
 dotenvy = "0.15"
+axum = "0.7"
+reqwest = { version = "0.11", features = ["json"] }
